# r2

./: .gitignore  data_info.text  r2_exp.text
MPC/apps/: wscript
MPC/apps/App.PathTracker/: App.PathTracker.cpp  wscript
MPC/libs/PathTracker/: ControlGenerator.cpp  ControlGenerator.h  ForwardSimulator.cpp  ForwardSimulator.h  PathLocalizer.cpp  PathLocalizer.h  PathTracker.cpp  PathTracker.h  wscript
MPC/ros/src/basil_pose_publisher/: CMakeLists.txt  package.xml
MPC/ros/src/basil_pose_publisher/include/: PoseDataGatherer.h
MPC/ros/src/basil_pose_publisher/src/: PoseDataGatherer.cpp  basil_pose_publisher_node.cpp
MPC/ros/src/basil_ros_support/: CMakeLists.txt  package.xml
MPC/ros/src/basil_ros_support/include/: sinsmsg.h
MPC/ros/src/basil_ros_support/include/basil/: basil.h
MPC/ros/src/basil_ros_support/src/: sinsmsg.cpp
MPC/ros/src/husky_openloop_control/: CMakeLists.txt  package.xml
MPC/ros/src/husky_openloop_control/src/: husky_openloop_control_node.cpp
MPC/ros/src/pathtracker_mpc/: CMakeLists.txt  package.xml
MPC/ros/src/pathtracker_mpc/include/: SAGEPacket.h
MPC/ros/src/pathtracker_mpc/src/: pathtracker_mpc_node.cpp
husky_dynamics/: initLocal.m  meta.m  parseHuskyLog.m
husky_dynamics/data_processors/: bodyVelsFromStates.m  bodyVelsToState.m  cleanupHuskyVars.m  datasetFromHuskyVars.m  datasetToGpDataset.m  genDataset.m  huskyLogStructToHuskyVars.m  huskyLogToDataset.m  huskyVarsToDataset.m  latestTimeStampedFile.m  parseHuskyLog.m  statesToBodyVels.m  subsampleDataset.m  varsFromHuskyLogOut.m
husky_dynamics/examples/ddr/: runTrainDdr.m  vizPredTraj.m
husky_dynamics/examples/gp/: printGpSuiteResults.m  testGpAngVel.m  testGpLatVel.m  testGpLinVel.m  trainGpAngVel.m  trainGpAngVelSuite.m  trainGpLatVel.m  trainGpLatVelSuite.m  trainGpLinVel.m  trainGpLinVelSuite.m  trainGpLinVelWithPrior.m  vizPred.m  vizPredTraj.m
husky_dynamics/models/: meta.m
husky_dynamics/models/ddr/: fwdSim.m  meta.m  predTrajDdr.m  predict.m  predictionResiduals.m  predictionRisk.m  trainDdr.m
husky_dynamics/models/gp/: dynDatasetToGpAngVelDataset.m  dynDatasetToGpLatVelDataset.m  dynDatasetToGpLinVelDataset.m  dynStatesToGpStates.m  dynamicsVarsToGpStates.m  gpAngVelErr.m  gpLatVelErr.m  gpLinVelErr.m  latestGps.m  predGpDynDataset.m  predSE.m  predTraj.m  predTrajGp.m  printSuiteResults.m  subsampleGpDataset.m  testGp.m  testGpAngVelInputs.m  testGpFn.m  testGpLatVelInputs.m  testGpLinVelInputs.m  testGpScript.m  trainGpAngVel.m  trainGpAngVelInputs.m  trainGpFn.m  trainGpLatVel.m  trainGpLatVelInputs.m  trainGpLinVel.m  trainGpLinVelInputs.m  trainGpScript.m  transformGpDataset.m  vizPred.m  vizPredTraj.m
husky_dynamics/unsorted/: statePredictionRisk.m  symmMatFromTril.m
mini_crusher/serial_api/: CMakeLists.txt  notes.txt
mini_crusher/serial_api/include/serial_api/: DataSerializer.h  FrameCheckSequence.h  McPayloadCommunicator.h  Test.h
mini_crusher/serial_api/src/: DataSerializer.cpp  FrameCheckSequence.cpp  McPayloadCommunicator.cpp  Test.cpp  run_tests.cpp
mini_crusher/serial_api_old/: data_serialize.c  data_serialize.h  fcs.c  fcs.h  mc_payload_com.c  mc_payload_com.h
pendulum/: forwardSimulate.m  initLocal.m  vizStates.m
pendulum/controllers/: constantController.m  lqrControls.m  lqrTrackingController.m
pendulum/examples/: convertTrajectoryToDataset.m  getLqrTrackingController.m  invertedPendulumControl.m  specifyAffineLinearization.m  specifyLinearization.m  specifyPhysicalParams.m  specifyPhysicalParamsNoisy.m  testForwardSimulate.m  testGpPredictor.m  trainGpPredictor.m  uncontrolledPendulum.m
pendulum/examples/gp/: convertTrajectoryToDataset.m
pendulum/examples/pendulum_trajectories/: testLinearization.m
pendulum/misc/: calcEnergy.m
pendulum/models/: forwardSimulateODE.m  forwardSimulateWithLinearController.m  linearizeAboutDesired.m  systemDerivatives.m  systemDerivativesWithNoise.m
pendulum/models/gp/: dynDatasetToGpDataset.m
pendulum/models/sim_pendulum/: forwardSimulateAB.m  forwardSimulateODE.m  systemDerivatives.m
pendulum/viz/: movieFramesFromStates.m  vizStates.m
pendulum_dynamics/: initLocal.m
pendulum_dynamics/controllers/: calcConstantControls.m  calcLqrHoverControls.m  constantController.m  lqrTrackingController.m  solveLqr.m
pendulum_dynamics/data_processors/: convertTrajToDynDataset.m
pendulum_dynamics/examples/gp/: calc_state_error.m  pred_traj.m  testGpPredictor.m  trainGpPredictor.m  train_gp_predictor.m
pendulum_dynamics/examples/pendulum_trajectories/: specifyPhysicalParamsNoisy.m
pendulum_dynamics/examples/traj/: getLqrHoverController.m  invertedHoverTraj.m  testDerivativeFnWithDt.m  uncontrolledPendulum.m  uncontrolledTraj.m
pendulum_dynamics/models/gp/: dynDatasetToGpDataset.m  trajToGpDataset.m  transformDynStateToGpState.m
pendulum_dynamics/models/sim_pendulum/: affinifyLinearization.m  forwardSimulateODEWithController.m  forwardSimulateODEWithPredictor.m  linearizeAtStateAndControl.m  systemDerivativesWithController.m  systemDerivativesWithControls.m  systemDerivativesWithPredictor.m
q1/: calcMaxTermsForAlphaEstimate.m  calcSequenceTerm.m  estimateAlpha.m  genSamples.m  initLocal.m  sampleFromUniform.m
q1/i_nid_rvs/: main.tex
utils/models/gp/: subsampleGpDataset.m  testGp.m  trainGp.m
writing/statement/: main.tex
